[workspace]
resolver = "2"

members = [
    "core", 
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
borsh = { version = "^1", default-features = false }
const-crypto = { version = "^0.3.0", default-features = false }
data-encoding = { version = "2.8.0", default-features = false }
generic-array-struct = { version = "=0.3.0-bc", default-features = false }
sanctum-u64-ratio = { version = "^1", default-features = false }
sanctum-fee-ratio = { version = "^1", default-features = false }
serde = { version = "1.0", default-features = false }
serde_bytes = { version = "^0.11", default-features = false }
serde_json = "^1.0"
tsify-next = { version = "^0.5.5", default-features = false }
wasm-bindgen = "^0.2"

# solana crates (for dev)
solana-pubkey = { version = "^2", default-features = false }
solana-account = { version = "^2", default-features = false }
solana-account-decoder-client-types = { version = "^2", default-features = false }
solana-instruction = { version = "^2", default-features = false }
mollusk-svm-programs-token = { version = "^0.1", default-features = false }
mollusk-svm = { version = "^0.1", default-features = false }


# workspace members
sanctum-reserve-core = { path = "core" }
